--- a/DataMining.tex
+++ b/DataMining.tex
@@ -217,7 +217,7 @@ Viele Kunden tätigen meist nur eine Bestellung im Onlineshop. Es kann keine Vor
 Um dieses Problem zu lösen, soll mittels des CRISP-DM Modells \cite{crisp}
 und des Datamining-Tools SPSS von IBM eine Bewertung durchgeführt werden, welche die
 Loyalität des Kunden bestimmen soll. Hierfür wurden zwei *.txt-Dateien über Kundendaten geliefert.
-Als Lösung wird eine Abbildung der Kundennummer auf das zu erwartende Kaufverhalten gefordert. 
+Als Lösung wird eine Abbildung der Kundennummer auf das zu erwartende Kaufverhalten gefordert.  
 
 \subsection{Situationsbewertung}
 
@@ -369,7 +369,7 @@ Unrealistische Werte wurden ebenfalls mit dem Auswahl-Knoten entfernt.
 \begin{figure}[h]
 	    \centering
 				     \includegraphics[width=\textwidth]{Datenvorbereitung.png}
-						\captionof{figure}{Filtertyp 8 - AVERAGE$\_$7}
+						\captionof{figure}{Erstellte Felder}
 \end{figure}
 
 
@@ -443,11 +443,13 @@ Damit stehen für die Modellierung zehn Felder zu Verfügung.
 \section{Modellierung}
 Als Grundlage für die Modellierung werden die unter ~\ref{Referenzwerte} ermittelten Referenzwerte verwendet. Ziel der Modellierung ist eine Maximierung des Gewinns, also ein Modell zu entwickeln, dessen Gewinn die berechneten Gewinne übertrifft.  
 \subsection{Wahl der Modellierungsknoten}
+Die Erklärungen zu den einzelnen Knoten sind \cite{nodes} entnommen und können dort nachgelesen werden. 
 Hinsichtlich der Struktur der Aufgabe kann man sich auf Baummodelle bei der Wahl der Knoten im SPSS Modeler beschränken. Hierfür wurden folgende Modellierungsknoten in Betracht gezogen:
 \begin{itemize}
+\item CHAID
+\item C5.0
 	\item Random-Trees
-	\item XRandom-Tree
-	\item CHAID
+	\item XGBoost-Baum
 	\item Tree-AS
 	\item C\&R-Tree
 \end{itemize} 
@@ -457,20 +459,37 @@ Ergebnisse: Die Support Vector Machine (SVM) lieferte viele NULL-Werte.
 \par
 Hinsichtlich der Validierung wurde zusätzlich überprüft, ob sich die getroffene Merkmalauswahl positiv auf den erzielten Gewinn auswirken konnte. Dabei konnte erkannt werden, welche Felder welchen Einfluß auf die Modellierung besitzen.
 \subsection{Test-Design}
-\subsubsection{Random-Trees}
-Dieser Knoten erwies sich als bester Moellierungsknoten.
- Der Algorithmus entwickelt ein Modell, welches sich aus verschiedenen Entscheidungsbäumen zusammensetzt.
- Random Trees entspricht in der grundlegenden Vorghensweise der des C\&R-Baums, erweitert
-diesen jedoch um zwei Punkte: Zum einen wird in diesem Modell Bagging verwendet, um
-ein Overfitting des Datensatzes zu vermeiden. Zum anderen wird für jede Aufteilung des Baums
-lediglich eine Stichprobe der Input-Werte zur Errechnung der Unreinheit benutzt. [IBM, 2016,
-S.104] Mittels diesem Modells konnten auf dem Trainingsdatensatz 11.495 e Gewinn erreicht
-werden.
-\subsubsection{XRandom-Tree}
+Ziel der Testausführung ist eine automatisierte Auswertung der verwendeten Modellierungsknoten aus den Datensätzen:
+Das jeweilige Modell-Nugget erstellt das Feld \$R-Target90\$ aus dem class Datensatz welches anschließend mit dem realen Feld target90 verglichen werden soll.
+Zu diesem Zweck wird die Entscheidungstabelle modifiziert:
+\begin{center}
+\begin{tabular}{c | c | c}
+target90 & \$R-target90\$ & Betrag
+\\
+\hline
+0 & 0 & 1.5
+\\
+\hline
+0 & 1 & 0
+\\
+\hline
+1 & 0 & -5
+\\
+\hline
+1 & 1  & 0
+\end{tabular}
+\end{center}
+Der Wert 0 bedeutet in diesem Kontext, dass ein Gutschein versendet wird.
+
+\begin{center}
+\includegraphics[width=\textwidth]{Screens/test_bewertung}
+\captionof{figure}{Testdesign}
+\end{center}
+
 \subsubsection{CHAID}
 Der CHAID-Knoten generiert Entscheidungsbäume unter der Verwendung der $\chi^2$  - Verteilung.
-Im Gegensatz zum C\&R-Baum können mit diesem Modell auch Bäume mit mehr als zwei
-Verzweigungen generiert werden. Berücksichtigt wurde das Verhalten des Gewinnes unter Merkmalauswahl und Boosting. 
+Im Gegensatz zum C\&R-Baum  und QUEST können mit diesem Modell auch nicht binäre Bäume generiert werden, d.h. Bäume mit mehr als zwei
+Verzweigungen. Berücksichtigt wurde das Verhalten des Gewinnes unter Merkmalauswahl und Boosting auf dem class Datensatz. 
 
 \begin{center}
 \begin{tabular}{ c | c | c }
@@ -483,10 +502,87 @@ $\overline{\text{Merkwahlauswahl}}$ & 8,697.00\;\euro  &  8,548.50\;\euro
 \\
 \end{tabular}
 \end{center}
+
+\begin{center}
+\includegraphics[width=\textwidth]{Screens/chaid}
+\captionof{figure}{CHAID - ohne Merkmalauswahl}
+\end{center}
+
+\begin{center}
+\includegraphics[width=\textwidth]{Screens/chaid_m}
+\captionof{figure}{CHAID - mit Merkmalauswahl}
+\end{center}
+
+Bemwerkenswert hierbei ist, dass Verwendung der Merkmalauswahl ein schlechteres Ergebnis produziert als ohne diese.
+\subsubsection{C5.0}
+{\bf Erklärung}:
+\par
+\vspace{0.2cm}
+Der C5.0-Algorithmus, erstellt einen Entscheidungsbaum oder ein Regelset.
+ Ein C5.0-Modell teilt die Stichprobe auf der Basis des Felds auf, das den maximalen
+Informationsgewinn liefert. Jede durch die erste Aufteilung definierte Teilstichprobe wird anschließend
+wieder aufgeteilt, üblicherweise auf der Grundlage eines anderen Felds. Der Prozess wird so lange fortgesetzt,
+bis die Unterstichproben nicht weiter aufgeteilt werden können. Zum Schluss werden die Aufteilungen
+der untersten Ebene noch einmal untersucht, wobei solche entfernt oder reduziert werden, die nicht
+wesentlich zum Wert des Modells beitragen.
+\par
+\vspace{1cm}
+Mit dem C5.0-Algorithmus konnten auf dem class Datensatz 9,055.00\;\euro\; Gewinn errechnet werden, also eine deutliche Verbesserung gegenüber der Vorhersage des CHAID-Knotens.
+
+\begin{center}
+\includegraphics[width=\textwidth]{Screens/c50}
+\captionof{figure}{C5.0 - ohne Merkmalauswahl}
+\end{center}
+
+\begin{center}
+\includegraphics[width=\textwidth]{Screens/c50_m}
+\captionof{figure}{C5.0 - mit Merkmalauswahl}
+\end{center}
+
+{\bf Auswirkung der Merkmalauswahl}:
+\par
+Im Gegensatz zum CHAID-Algorithmus, verbessert eine vorgeschaltete Merkmalauswahl hier den vorhergesagten Gewinn: Ohne vorgeschaltete Merkmalauswahl erziehlt der Algorithmus 8,548.50\;\euro\; Gewinn, mit dieser sogar 8,732.00\;\euro\; auf dem class Datensatz.
+\par
+\vspace{0.2cm}
+
+{\bf Auswirkung der Fehlklassifizierung:}
+\par
+Bei Baummodellen kann eine Gewichtung der Fehlklassifikationen vorgenommen werden. Diese
+Gewichtung dient der Anpassung, indem eine Fehlklassifizierung höhere
+Kosten bedeutet. Bei einer Fehlklassifizierung mit dem Faktor 3.0 berechnet der C5.0-Algorithmus einen Gewinn von 9,028.50\;\euro,\; mit vorgeschalteter Merkmalauswahl erhält man sogar einen Gewinn von 9,055.00\;\euro\; auf dem class Datensatz.
+
+\subsubsection{Random-Trees}
+{\bf Erklärung}:
+\par
+\vspace{0.2cm}
+Dieser Knoten erwies sich als bester Modellierungsknoten.
+Der Algorithmus entwickelt ein Modell, welches sich aus verschiedenen Entscheidungsbäumen zusammensetzt.
+Random Trees entspricht in der grundlegenden Vorghensweise der des C\&R-Baums, erweitert
+diesen jedoch um zwei Punkte: Zum einen wird in diesem Modell Bagging verwendet, um
+ein Overfitting des Datensatzes zu vermeiden. Zum anderen wird für jede Aufteilung des Baums
+lediglich eine Stichprobe der Input-Werte zur Errechnung der Unreinheit benutzt.
+Mittels dieses Modells konnten auf dem class Datensatz 10,143.50 \euro  Gewinn vorhergesagt werden.
+
+\begin{center}
+\includegraphics[width=\textwidth]{Screens/random_trees}
+\captionof{figure}{Random Trees Modellierung}
+\end{center}
+
+{\bf Auswirkung der Merkmalauswahl und der Fehlklassifizierungskosten}:
+\par
+Unter Verwendung der Merkmalauswahl liefert der Random Trees-Algorithmus leicht bessere Ergebnisse, eine zusätzliche Verwendung der Fehlklssifizierungskosten konnte auch bei Gewichtung mit 3.0 keine Verbesserung mehr bewirken.
+
+\begin{center}
+\includegraphics[width=\textwidth]{Screens/random_trees_m}
+\captionof{figure}{Random Trees Modellierung mit Merkmalauswahl}
+\end{center}
+
+\subsubsection{XGBoost-Baum}
+
 \subsubsection{Tree-AS}
 \subsubsection{C\&R-Tree}
 
-%Abbildungsverzeichnis
+
 \newpage
 \section{Abbildungsverzeichnis}
 \listoffigures
@@ -497,8 +593,8 @@ $\overline{\text{Merkwahlauswahl}}$ & 8,697.00\;\euro  &  8,548.50\;\euro
 \thispagestyle{plain}
 \begin{thebibliography}{DiplRS}
 \bibitem[1]{crisp} {\it CRISP-DM: Ein Standard-Prozess-Modell für Data Mining} \url{ https://statistik-dresden.de/archives/1128}.
-\bibitem[2]{nodes} {\it IBM SPSS Modeler 18.1 Modeling Nodes} 
-\url{ftp://public.dhe.ibm.com/software/analytics/spss/documentation/modeler/18.1.1/en/ModelerModelingNodes.pdf}
+\bibitem[2]{nodes} {\it IBM SPSS Modeler 18.0 Modellierungsknoten} 
+\url{ftp://public.dhe.ibm.com/software/analytics/spss/documentation/modeler/18.0/de/ModelerModelingNodes.pdf}
 \end{thebibliography}
 
 \newpage
